--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "yearn-protocol",
+    "name": "tesseract-protocol",
     "devDependencies": {
         "@commitlint/cli": "^12.1.4",
         "@commitlint/config-conventional": "^12.1.4",
